--- a/src/main/resources/fxml/ContenidoPrincipal.fxml
+++ b/src/main/resources/fxml/ContenidoPrincipal.fxml
@@ -39,11 +39,12 @@
             </MenuBar>
             <HBox prefHeight="100.0" prefWidth="1200.0">
                <children>
-                  <AnchorPane fx:id="contenedor_botones_acciones" prefHeight="100.0" prefWidth="300.0" />
-                  <Pane prefHeight="100.0" prefWidth="900.0">
+                  <AnchorPane fx:id="contenedor_botones_acciones" prefHeight="100.0" />
+                  <AnchorPane prefHeight="200.0" prefWidth="900.0">
                      <children>
-                        <Separator layoutX="2.0" layoutY="10.0" orientation="VERTICAL" prefHeight="80.0" />
-                     </children></Pane>
+                        <Separator layoutX="1.0" layoutY="9.0" orientation="VERTICAL" prefHeight="80.0" />
+                     </children>
+                  </AnchorPane>
                </children>
             </HBox>
             <HBox prefHeight="572.0" prefWidth="1200.0">
