--- a/src/main/resources/fxml/Usuario/UsuarioBusqueda.fxml
+++ b/src/main/resources/fxml/Usuario/UsuarioBusqueda.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import edu.pe.pucp.team_1.dp1.botonimagen.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
@@ -9,5 +10,6 @@
 <AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="250.0" style="-fx-background-color: red;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Controller_Usuario">
    <children>
       <Label layoutX="57.0" layoutY="278.0" text="Busqueda de Usuarios" />
+      <BotonImagen layoutX="96.0" layoutY="318.0" onAction="#randomAction" text="Buscar" targetController="Usuario" />
    </children>
 </AnchorPane>
