--- a/src/main/resources/fxml/Materiales/Producto.fxml
+++ b/src/main/resources/fxml/Materiales/Producto.fxml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane layoutY="-1.0" prefHeight="50.0" prefWidth="250.0">
+      <Pane layoutX="-2.0" layoutY="-1.0" prefHeight="50.0" prefWidth="250.0">
          <children>
             <Label layoutX="82.0" layoutY="10.0" text="Búsqueda">
                <font>
@@ -53,6 +59,117 @@
       <TextField layoutX="196.0" layoutY="441.0" prefHeight="20.0" prefWidth="40.0" />
       <TextField layoutX="196.0" layoutY="474.0" prefHeight="20.0" prefWidth="40.0" />
       <Button layoutX="140.0" layoutY="522.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
-      <AnchorPane layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0" />
+      <AnchorPane layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
+         <children>
+            <TabPane layoutY="56.0" prefHeight="522.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="General">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="24.0" layoutY="50.0" text="Nombre del producto">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="27.0" layoutY="98.0" text="Tipo del producto">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="27.0" layoutY="139.0" text="Fecha de adquisición">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="27.0" layoutY="184.0" text="Descripción del producto">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="400.0" layoutY="98.0" text="Precio">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="400.0" layoutY="140.0" text="Fecha de vencimiento">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <TextField layoutX="204.0" layoutY="48.0" prefHeight="25.0" prefWidth="488.0" />
+                              <ComboBox layoutX="204.0" layoutY="95.0" prefHeight="25.0" prefWidth="173.0" />
+                              <TextField layoutX="543.0" layoutY="103.0" />
+                              <DatePicker layoutX="204.0" layoutY="137.0" />
+                              <DatePicker layoutX="544.0" layoutY="138.0" prefHeight="25.0" prefWidth="147.0" />
+                              <TextArea layoutX="204.0" layoutY="184.0" prefHeight="153.0" prefWidth="490.0" />
+                              <CheckBox layoutX="618.0" layoutY="354.0" mnemonicParsing="false" text="Activo" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+                <Tab text="Distribución">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="24.0" layoutY="50.0" text="Almacén">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="24.0" layoutY="91.0" text="Racks">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox layoutX="197.0" layoutY="48.0" prefHeight="20.0" prefWidth="457.0" />
+                              <TableView layoutX="24.0" layoutY="134.0" prefHeight="289.0" prefWidth="423.0">
+                                <columns>
+                                  <TableColumn prefWidth="151.0" text="Código de Rack" />
+                                  <TableColumn prefWidth="271.0" text="Cantidad disponible" />
+                                </columns>
+                              </TableView>
+                              <Pane layoutX="497.0" layoutY="134.0" prefHeight="287.0" prefWidth="215.0">
+                                 <children>
+                                    <Pane layoutX="-1.0" layoutY="1.0" prefHeight="50.0" prefWidth="216.0">
+                                       <children>
+                                          <Label layoutX="69.0" layoutY="10.0" text="Acciones">
+                                             <font>
+                                                <Font size="20.0" />
+                                             </font>
+                                          </Label>
+                                       </children>
+                                    </Pane>
+                                    <Label layoutX="88.0" layoutY="113.0" text="Ingreso" />
+                                    <Label layoutX="76.0" layoutY="227.0" text="Movimiento" />
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="88.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" />
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="88.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true" />
+                                    <Line endX="100.0" layoutX="108.0" layoutY="61.0" startX="-100.0" />
+                                 </children>
+                              </Pane>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+                  <Tab text="Detalle">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+                     </content>
+                  </Tab>
+              </tabs>
+            </TabPane>
+            <Pane prefHeight="50.0" prefWidth="750.0">
+               <children>
+                  <Label layoutX="133.0" layoutY="10.0" text="Detalle del Producto">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                  <Line endX="600.0" layoutX="133.0" layoutY="50.0" startX="-100.0" />
+               </children>
+            </Pane>
+         </children></AnchorPane>
+      <Line endX="100.0" layoutX="118.0" layoutY="49.0" startX="-100.0" />
    </children>
 </AnchorPane>
