--- a/src/main/resources/fxml/Materiales/RackMovimiento.fxml
+++ b/src/main/resources/fxml/Materiales/RackMovimiento.fxml
@@ -70,5 +70,11 @@
       </Label>
       <TextField layoutX="141.0" layoutY="305.0" prefHeight="20.0" prefWidth="111.0" />
       <Button layoutX="411.0" layoutY="352.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="111.0" text="Mover productos" />
+      <Label layoutX="271.0" layoutY="308.0" text="Tipo de movimiento:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <ComboBox layoutX="403.0" layoutY="305.0" prefHeight="25.0" prefWidth="126.0" />
    </children>
 </AnchorPane>
