--- a/src/main/resources/fxml/Seguridad/Login.fxml
+++ b/src/main/resources/fxml/Seguridad/Login.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPaneLogin" maxHeight="700.0" maxWidth="1200.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.LoginController">
+<AnchorPane id="AnchorPaneLogin" maxHeight="700.0" maxWidth="1200.0" prefHeight="700.0" prefWidth="1200.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.LoginController">
    <children>
       <ImageView fitHeight="700.0" fitWidth="1200.0" layoutY="29.5" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="29.5" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.5">
          <image>
-            <Image url="@Imagenes/warehouse_wallpaper.png" />
+            <Image url="@../Imagenes/warehouse_wallpaper.png" />
          </image>
       </ImageView>
       <AnchorPane layoutX="300.0" layoutY="150.0" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgba(0,0,0,0.5);" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="150.0">
@@ -35,7 +35,7 @@
                <children>
                   <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="62.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="126.0">
                      <image>
-                        <Image url="@Imagenes/sigapucp_logo.png" />
+                        <Image url="@../Imagenes/sigapucp_logo.png" />
                      </image>
                   </ImageView>
                </children>
