--- a/src/main/resources/fxml/Ventas/ProformaVista.fxml
+++ b/src/main/resources/fxml/Ventas/ProformaVista.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
@@ -17,7 +18,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="572.0" prefWidth="250.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="750.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="750.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="250.0" AnchorPane.bottomAnchor="516.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
@@ -69,7 +70,7 @@
             <Insets />
          </opaqueInsets>
       </AnchorPane>
-      <AnchorPane layoutX="283.0" layoutY="33.0" prefHeight="572.0" prefWidth="750.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="283.0" layoutY="33.0" prefHeight="572.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="750.0" AnchorPane.bottomAnchor="523.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
@@ -119,7 +120,7 @@
             </AnchorPane>
             <AnchorPane layoutX="33.0" layoutY="339.0" prefHeight="402.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                <children>
-                  <AnchorPane layoutX="38.0" layoutY="195.0" prefHeight="330.0" prefWidth="526.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                  <AnchorPane layoutX="38.0" layoutY="195.0" prefHeight="330.0" prefWidth="526.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="72.0">
                      <children>
                         <TableView layoutX="12.0" layoutY="14.0" prefHeight="200.0" prefWidth="500.0">
                           <columns>
@@ -167,22 +168,26 @@
                         </TextField>
                      </children>
                   </AnchorPane>
-                  <AnchorPane layoutX="517.0" layoutY="101.0" prefHeight="330.0" prefWidth="224.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="526.0" AnchorPane.rightAnchor="0.0">
-                     <children>
-                        <Button layoutX="62.0" layoutY="17.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="Button" />
-                        <Button layoutX="62.0" layoutY="133.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="80.0" text="Button" />
-                        <Label layoutX="53.0" layoutY="100.0" text="Generar Pedido">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="46.0" layoutY="216.0" text="Eliminar Proforma">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
+                  <TitledPane animated="false" layoutX="521.0" layoutY="85.0" prefHeight="311.0" prefWidth="218.0" text="Acciones" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="526.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="85.0">
+                     <content>
+                        <AnchorPane prefHeight="291.0" prefWidth="222.0">
+                           <children>
+                              <Button layoutX="89.0" layoutY="67.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="N" />
+                              <Button layoutX="89.0" layoutY="150.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                              <Label layoutX="63.0" layoutY="109.0" text="Generar Pedido">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="61.0" layoutY="193.0" text="Eliminar Proforma">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
                   <AnchorPane layoutX="1.0" layoutY="-52.0" prefHeight="72.0" prefWidth="750.0" AnchorPane.bottomAnchor="330.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Label layoutX="12.0" layoutY="50.0" text="Cant.:">
@@ -197,12 +202,19 @@
                            </font>
                         </Label>
                         <TextField layoutX="225.0" layoutY="45.0" prefHeight="25.0" prefWidth="250.0" />
-                        <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="489.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button layoutX="487.0" layoutY="47.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="+">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
                      </children>
                   </AnchorPane>
                </children>
             </AnchorPane>
          </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
       </AnchorPane>
    </children>
 </AnchorPane>
