--- a/src/main/resources/fxml/Ventas/PedidosVista.fxml
+++ b/src/main/resources/fxml/Ventas/PedidosVista.fxml
@@ -2,11 +2,16 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
@@ -14,9 +19,9 @@
 
 <AnchorPane id="AnchorPane" prefHeight="572.00" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="43.0" layoutY="43.0" prefHeight="572.0" prefWidth="250.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="750.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="43.0" layoutY="43.0" prefHeight="572.0" prefWidth="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="750.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="250.0" AnchorPane.bottomAnchor="516.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane layoutX="3.0" layoutY="2.0" prefHeight="50.0" prefWidth="250.0" AnchorPane.bottomAnchor="531.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="17.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
                   <Label layoutX="82.0" layoutY="10.0" text="Búsqueda">
@@ -66,9 +71,9 @@
             <Insets />
          </opaqueInsets>
       </AnchorPane>
-      <AnchorPane layoutX="293.0" layoutY="43.0" prefHeight="572.0" prefWidth="750.0" style="-fx-border-color: black;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="293.0" layoutY="43.0" prefHeight="572.0" prefWidth="750.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="33.0" layoutY="33.0" prefHeight="50.0" prefWidth="750.0" AnchorPane.bottomAnchor="523.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane layoutX="2.0" layoutY="2.0" prefHeight="50.0" prefWidth="750.0" AnchorPane.bottomAnchor="534.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="1.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
                   <Label layoutX="133.0" layoutY="10.0" text="Pedido ">
@@ -82,6 +87,142 @@
                         <Font size="20.0" />
                      </font>
                   </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="51.0" prefHeight="205.0" prefWidth="750.0">
+               <children>
+                  <Label layoutX="14.0" layoutY="14.0" text="Cliente:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="296.0" layoutY="14.0" text="Vendedor:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="549.0" layoutY="14.0" text="Estado:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="42.0" text="Tipo Doc.:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="70.0" text="Fecha de Pedido:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="126.0" text="Dir. Envío:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="154.0" text="Dir. Facturación:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="98.0" text="Moneda:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="296.0" layoutY="98.0" text="Tipo de cambio:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="296.0" layoutY="70.0" text="Fecha Est. Entrega:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <RadioButton layoutX="108.0" layoutY="44.0" mnemonicParsing="false" text="Boleta" />
+                  <RadioButton layoutX="188.0" layoutY="44.0" mnemonicParsing="false" text="Factura" />
+                  <TextField layoutX="99.0" layoutY="12.0" prefHeight="25.0" prefWidth="180.0" />
+                  <TextField editable="false" layoutX="370.0" layoutY="12.0" prefHeight="25.0" prefWidth="160.0" />
+                  <TextField editable="false" layoutX="607.0" layoutY="12.0" prefHeight="25.0" prefWidth="120.0" />
+                  <Label layoutX="296.0" layoutY="42.0" text="R.U.C.:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField layoutX="370.0" layoutY="40.0" prefHeight="25.0" prefWidth="160.0" />
+                  <Label layoutX="549.0" layoutY="42.0" text="D.N.I.:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField layoutX="607.0" layoutY="40.0" prefHeight="25.0" prefWidth="120.0" />
+                  <DatePicker layoutX="143.0" layoutY="68.0" prefHeight="25.0" prefWidth="135.0" />
+                  <DatePicker layoutX="421.0" layoutY="68.0" prefHeight="25.0" prefWidth="135.0" />
+                  <TextField editable="false" layoutX="99.0" layoutY="96.0" prefHeight="25.0" prefWidth="120.0" />
+                  <TextField editable="false" layoutX="421.0" layoutY="96.0" prefHeight="25.0" prefWidth="120.0" />
+                  <TextField layoutX="123.0" layoutY="124.0" prefHeight="25.0" prefWidth="604.0" />
+                  <TextField layoutX="123.0" layoutY="152.0" prefHeight="25.0" prefWidth="604.0" />
+                  <CheckBox layoutX="14.0" layoutY="185.0" mnemonicParsing="false" text="Marque si ambas direcciones son la misma" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutY="256.0" maxHeight="317.0" maxWidth="750.0" prefHeight="317.0" prefWidth="750.0">
+               <children>
+                  <AnchorPane prefHeight="40.0" prefWidth="750.0" AnchorPane.bottomAnchor="287.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label layoutX="14.0" layoutY="5.0" text="Cant.:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Spinner layoutX="68.0" layoutY="3.0" prefHeight="25.0" prefWidth="58.0" />
+                        <Label layoutX="208.0" layoutY="6.0" text="Producto:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="280.0" layoutY="5.0" prefHeight="25.0" prefWidth="240.0" />
+                        <Button layoutX="529.0" layoutY="6.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="+">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane layoutX="33.0" layoutY="44.0" prefHeight="277.0" prefWidth="555.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="44.0">
+                     <children>
+                        <TableView layoutX="14.0" layoutY="-7.0" prefHeight="201.0" prefWidth="538.0">
+                          <columns>
+                            <TableColumn prefWidth="60.333343505859375" text="Cod." />
+                            <TableColumn prefWidth="279.33331298828125" text="Descripción" />
+                              <TableColumn minWidth="0.0" prefWidth="48.66668701171875" text="Cant." />
+                              <TableColumn prefWidth="48.66668701171875" text="P.U." />
+                              <TableColumn minWidth="0.0" prefWidth="99.6666259765625" text="Precio" />
+                          </columns>
+                        </TableView>
+                        <TextField editable="false" layoutX="432.0" layoutY="199.0" prefHeight="13.0" prefWidth="120.0" />
+                        <TextField editable="false" layoutX="432.0" layoutY="224.0" prefHeight="13.0" prefWidth="120.0" />
+                        <Label layoutX="329.0" layoutY="257.0" text="Total: " />
+                        <Label layoutX="329.0" layoutY="230.0" text="I.G.V. (18%):" />
+                        <Label layoutX="329.0" layoutY="203.0" text="Subtotal: " />
+                        <TextField editable="false" layoutX="432.0" layoutY="250.0" prefHeight="13.0" prefWidth="120.0" />
+                     </children>
+                  </AnchorPane>
+                  <TitledPane animated="false" collapsible="false" layoutX="565.0" layoutY="37.0" prefHeight="281.0" prefWidth="177.0" text="Acciones">
+                     <content>
+                        <AnchorPane prefHeight="222.0" prefWidth="175.0">
+                           <children>
+                              <Button layoutX="71.0" layoutY="5.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="5.0" />
+                              <Button layoutX="72.0" layoutY="86.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                              <Button layoutX="71.0" layoutY="157.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="D" />
+                              <Label layoutX="76.0" layoutY="57.0" text="Editar" />
+                              <Label layoutX="70.0" layoutY="128.0" text="Eliminar" />
+                              <Label layoutX="61.0" layoutY="194.0" text="Descuentos" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </TitledPane>
                </children>
             </AnchorPane>
          </children>
