--- a/src/main/resources/fxml/Materiales/Producto.fxml
+++ b/src/main/resources/fxml/Materiales/Producto.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -123,30 +124,24 @@
                                  </font>
                               </Label>
                               <ComboBox layoutX="197.0" layoutY="48.0" prefHeight="20.0" prefWidth="457.0" />
-                              <TableView layoutX="24.0" layoutY="134.0" prefHeight="289.0" prefWidth="423.0">
+                              <TableView layoutX="24.0" layoutY="142.0" prefHeight="289.0" prefWidth="423.0">
                                 <columns>
                                   <TableColumn prefWidth="151.0" text="Código de Rack" />
                                   <TableColumn prefWidth="271.0" text="Cantidad disponible" />
                                 </columns>
                               </TableView>
-                              <Pane layoutX="497.0" layoutY="134.0" prefHeight="287.0" prefWidth="215.0">
-                                 <children>
-                                    <Pane layoutX="-1.0" layoutY="1.0" prefHeight="50.0" prefWidth="216.0">
+                              <TitledPane animated="false" collapsible="false" layoutX="503.0" layoutY="142.0" prefHeight="273.0" prefWidth="177.0" text="Acciones">
+                                 <content>
+                                    <AnchorPane prefHeight="239.0" prefWidth="175.0">
                                        <children>
-                                          <Label layoutX="69.0" layoutY="10.0" text="Acciones">
-                                             <font>
-                                                <Font size="20.0" />
-                                             </font>
-                                          </Label>
+                                          <Button layoutX="68.0" layoutY="41.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="41.0" />
+                                          <Button layoutX="68.0" layoutY="122.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
+                                          <Label layoutX="72.0" layoutY="93.0" text="Ingresar" />
+                                          <Label layoutX="66.0" layoutY="164.0" text="Movimiento" />
                                        </children>
-                                    </Pane>
-                                    <Label layoutX="88.0" layoutY="113.0" text="Ingreso" />
-                                    <Label layoutX="76.0" layoutY="227.0" text="Movimiento" />
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="88.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" />
-                                    <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="88.0" layoutY="160.0" pickOnBounds="true" preserveRatio="true" />
-                                    <Line endX="100.0" layoutX="108.0" layoutY="61.0" startX="-100.0" />
-                                 </children>
-                              </Pane>
+                                    </AnchorPane>
+                                 </content>
+                              </TitledPane>
                            </children>
                         </AnchorPane>
                      </content>
