--- a/src/main/resources/fxml/Usuario/UsuarioVista.fxml
+++ b/src/main/resources/fxml/Usuario/UsuarioVista.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Controller_Usuario">
    <children>
       <AnchorPane prefHeight="572.0" prefWidth="250.0" />
       <AnchorPane layoutX="250.0" prefHeight="572.0" prefWidth="750.0" />
